# rdfind

./: .clang-format  .gitignore  .travis.yml  .yamllint  AUTHORS  ChangeLog  Checksum.cc  Checksum.hh  CmdlineParser.cc  CmdlineParser.hh  Dirlist.cc  Dirlist.hh  EasyRandom.cc  EasyRandom.hh  Fileinfo.cc  Fileinfo.hh  INSTALL  LICENSE  ListProgress.cc  ListProgress.hh  Makefile.am  MultiAttributeCompare.hh  NEWS  Portfile  README  README.md  RdfindDebug.hh  Rdutil.cc  Rdutil.hh  TODO  UndoableUnlink.cc  UndoableUnlink.hh  VERSION  VERSION.txt  a  algos.hh  appveyor.yml  bootstrap.sh  configure.ac  configure.in  (+14 more)
.github/workflows/: clang18.yml  codeql.yml  cppcheck.yml  cygwin.yml  debian-bookworm.yml  debian-bullseye.yml  debian-trixie.yml  deterministic.yml  fedora-40.yml  fedora-41.yml  formatting.yml  gcc10.yml  gcc11.yml  gcc12.yml  gcc13.yml  gcc14.yml  gcc9.yml  mac.yml  quality.yml  quickbuild.yml  shellcheck.yml  shellformatting.yml  ubuntu-default-with-xxhash.yml  ubuntu-default.yml  yamllint.yml
cppcheck/: run_cppcheck.sh
debianpackage/: changelog  control  copyright  create_archive.sh  create_package.sh  creating_deb_pkg.txt
inofficial_cmake/: CMakeLists.txt  config.h.in
scripts/: check_popcon.sh  setversionnumber.sh
shell-autocomplete/: _rdfind
testcases/: checksum_buffersize.sh  checksum_buffersize_speedtest.sh  checksum_options.sh  checksum_speedtest.sh  common_funcs.sh  hardlink_fails.sh  hardlink_groups.sh  largefilesupport.sh  md5collisions.sh  readme.txt  sha1collisions.sh  skip_options.sh  symlinking_action.sh  verify_deterministic_operation.sh  verify_dryrun_option.sh  verify_filesize_option.sh  verify_maxfilesize_option.sh  verify_outputdelimiter_option.sh  verify_ranking.sh
testcases/md5collisions/: letter_of_rec.ps  order.ps
testcases/sha1collisions/: README.txt  coll.tar.bz2.b64
